# substill

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
asd/: __init__.py  api.py  autodetect.py  builders.py
asd/data/: cifar10.py  imagenet.py
asd/losses/: __init__.py  attention_loss.py  combined_loss.py  relation_loss.py  sparsity_loss.py  subspace_loss.py
asd/models/: __init__.py  projectors.py  student.py  teacher.py  teacher_ext.py
asd/profiling/: __init__.py  activation_capture.py  sparsity_analysis.py  stability.py  svd_analysis.py
asd/training/: __init__.py  scheduler.py  trainer.py
asd/utils/: __init__.py  visualization.py
config/: default.yaml
docs/: README.md  adding_architectures.md  algorithm.md  api.md  benchmarks.md  concepts.md  conf.py  cpsd.md  explainer.md  findings.md  guide.md  handoff.md  index.md  init_findings.md  learned_restriction.md  open-questions.md  quickstart.md  report.md  results.md  v3-improvements.md  v9_status_and_resumption.md
docs/legacy/: algorithm.md  quickstart.md
examples/: README.md  absorbed_init.py  learned_restriction.py  quickstart_pipeline.py  vision_resnet.py
fasd/: __init__.py  api.py  autodetect.py  builders.py  pipeline.py
fasd/arch/: __init__.py  registry.py  spec.py
fasd/compression/: absorbed_init.py  cpi.py  diff_rank.py  factored_linear.py  quantization.py  rank_allocator.py  sparse_block.py  width_pruner.py
fasd/data/: __init__.py
fasd/losses/: generative_kd.py  procrustes.py  subspace.py
fasd/models/: __init__.py
fasd/profiling/: __init__.py  activation_capture.py  behavioral_rank.py  functional_score.py  gamma_fold.py  gqa_basis.py  rope.py  stability.py  streaming_pca.py  token_weighting.py
fasd/training/: __init__.py  distill.py  onpolicy.py  reabsorb.py  stiefel_optim.py
fasd/util/: param_accounting.py  rr_norm.py
fasd/vision/: resnet.py
papers/: cpsd_results_v1.md  derisk_results.md  fasd_neurips_skeleton.tex  fasd_preprint.tex  gap_analysis.md  neurips_2024.sty  novel_mechanism.md  positioning_for_rewrite.md
scripts/: 00_finetune_teacher.py  01_profile_teacher.py  02_build_student.py  03_train_asd.py  04_evaluate.py  05_visualize.py  06_sweep.py  07_bench.py  08_ablation.py  09_llm_distill.py  10_aggregate.py  11_compare_sweeps.py  12_dense_sweep.py  13_bench_ext.py  14_v2_compare.py  README.md  cpsd_aggregate.py  cpsd_compare.py  cpsd_compare_submit.sh  cpsd_cpi_init_eval.py  cpsd_experiment_submit.sh  distill_cifar_resnet.py  distill_gpt2_wikitext.py  distill_gpt2_wikitext_fasd.py  distill_llama32_fsd.py  distill_tinyllama_fasd.py  eval_harness.py  fasd_ablation.py  fasd_ablation_job.yaml  fasd_ablation_submit.sh  fasd_aggregate.py  fasd_debug_probe.py  fasd_v11_autolaunch.sh  fasd_v11_collect.sh  finetune_teacher.py  fsd_ablation_grid.py  fsd_headline_experiment.py  resnet50_distill.py  resnet50_distill_submit.sh  run_matrix.sh  (+1 more)
scripts/analysis/: axis.py  bench.py  budget_scaling.py  diag_init_error.py  h2h.py  heads.py  llama_basis.py  lrb.py  lrd_stats.py  lrd_validate.py  objectives.py  why_absorbed.py
scripts/cpsd/: cpsd_aggregate.py  cpsd_compare.py  cpsd_compare_submit.sh  cpsd_cpi_init_eval.py  cpsd_experiment_submit.sh
scripts/fsd/: distill_llama32_fsd.py  eval_harness.py  fasd_ablation.py  fasd_ablation_job.yaml  fasd_ablation_submit.sh  fasd_aggregate.py  fsd_ablation_grid.py  fsd_headline_experiment.py
scripts/repro_baselines/: __init__.py  _common.py  distillm_llama32.py  gkd_llama32.py  minillm_llama32.py  vanilla_kd_llama32.py
scripts/vision/: resnet50_distill.py  resnet50_distill_submit.sh  resnet_kd_select.py
substill/: __init__.py  api.py  autodetect.py  builders.py  lrd.py  pipeline.py
substill/_asd/: __init__.py
substill/arch/: __init__.py  interpreter.py  registry.py  spec.py
tests/: test_activation_capture.py  test_arch_decouple.py  test_critique_fixes.py  test_delta_capture.py  test_deprecated_fasd_shim.py  test_fasd_absorbed_init.py  test_fasd_asd_parity.py  test_fasd_behavioral_rank.py  test_fasd_branch_autodetect.py  test_fasd_distill_smoke.py  test_fasd_generative_kd.py  test_fasd_onpolicy_rollouts.py  test_fasd_pra_optim_state.py  test_fasd_procrustes_invariance.py  test_fasd_profile_refresh.py  test_fasd_progressive_chain.py  test_fasd_quantization.py  test_fasd_schedule.py  test_fasd_stability_cap.py  test_fasd_streaming_pca_parity.py  test_fasd_teacher_correction.py  test_fasd_teacher_feature_cache.py  test_fasd_token_weighting.py  test_fasd_v7_regressions.py  test_fasd_width_pruner.py  test_fsd_adaptive_objective.py  test_fsd_arch_spec.py  test_fsd_conv2d_absorbed.py  test_fsd_cpi_llama_fidelity.py  test_fsd_cpi_llama_init.py  test_fsd_cpi_ov.py  test_fsd_cpsd_integration.py  test_fsd_diff_rank.py  test_fsd_diff_rank_pipeline.py  test_fsd_factored_linear.py  test_fsd_functional_score.py  test_fsd_gamma_fold.py  test_fsd_gqa_basis.py  test_fsd_llama_cpsd.py  test_fsd_param_accounting.py  (+18 more)
(+92 files in other folders)
