[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-distill"
version = "0.2.0"
description = "Activation Subspace Distillation — drop-in feature KD for PyTorch models, CNNs and LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ASD contributors" }]
license = { text = "MIT" }
keywords = ["pytorch", "distillation", "compression", "subspace", "cka"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "omegaconf>=2.3",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout"]
viz = ["matplotlib>=3.7", "tensorboard"]
llm = ["transformers>=4.30", "datasets>=2.0"]
all = ["pytest>=7.0", "pytest-timeout", "matplotlib>=3.7", "tensorboard",
       "transformers>=4.30", "datasets>=2.0"]

[project.urls]
Documentation = "https://github.com/anthropics/neural-distill#readme"
Source = "https://github.com/anthropics/neural-distill"

[tool.setuptools.packages.find]
include = ["asd*", "fasd*"]
