[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substill"
version = "0.4.0"
description = "Learned Restriction Distillation (LRD) and activation-subspace compression for LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "neural_distill contributors" }]
license = { text = "MIT" }
keywords = ["pytorch", "distillation", "compression", "subspace", "stiefel", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "omegaconf>=2.3",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout", "ruff>=0.6"]
viz = ["matplotlib>=3.7", "tensorboard"]
llm = ["transformers>=4.30", "datasets>=2.0"]
docs = ["sphinx>=7.0", "furo>=2024.1", "myst-parser>=2.0"]
all = ["pytest>=7.0", "pytest-timeout", "ruff>=0.6", "matplotlib>=3.7",
       "tensorboard", "transformers>=4.30", "datasets>=2.0",
       "sphinx>=7.0", "furo>=2024.1", "myst-parser>=2.0"]

[tool.setuptools.packages.find]
include = ["substill*", "fasd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
# runs/ holds throwaway de-risk prototypes and experiment outputs (gitignored).
extend-exclude = ["runs"]

[tool.ruff.lint]
# Strict selection: pyflakes, pycodestyle, isort, pyupgrade, bugbear,
# comprehensions, pep8-naming, flake8-simplify, pydocstyle.
select = ["E", "W", "F", "I", "UP", "B", "C4", "N", "SIM", "D"]
# Carve-outs for the research reality of this codebase:
#   N801 — class names: keeps the public `F_ASDLoss` without an API-breaking rename.
#   N803/N806 — argument/variable names: math notation (V_in, V_out, W_T, Q, K) is
#               intentional and matches the papers; renaming would obscure the math.
#   N812/N814 — import aliases: the `import torch.nn.functional as F` idiom and friends.
#   D102/D105/D107 — undocumented method/dunder/__init__: avoids ~90 trivial docstrings;
#               public classes (D101) and functions (D103) are still required.
ignore = ["N801", "N803", "N806", "N812", "N814", "D102", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
# Re-export hubs: unused imports and missing package docstrings are expected.
"**/__init__.py" = ["F401", "D104"]
# Tests, scripts, and examples are not library surface: skip docstring + naming churn.
"tests/**" = ["D", "N"]
"scripts/**" = ["D", "N"]
"examples/**" = ["D", "N"]
"runs/**" = ["D", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"
